# mammoth

./: .gitignore  CMakeLists.txt  README.md  flash.jlink  mammoth.jdebug  prj.conf
boards/bee_stm32f4/: Kconfig.bee_stm32f4  Kconfig.defconfig  bee_stm32f4.dts  bee_stm32f4.yaml  bee_stm32f4_defconfig  board.cmake  board.yml
boards/bee_stm32f4/doc/: index.rst
inc/: aim.h  async_serial.h  can.h  chassis.h  dji_dbus.h  get_camera_data.h  load_ring.h  main.h  motor_music.h  musical_source.h  remote.h  serial.h  shoot_ring.h  test.h  upper_computer_communication.h
motorPack/: CubeMarsAK.cpp  CubeMarsAK.h  DM_S3519.cpp  DM_S3519.h  Dji_Rm3508.cpp  Dji_Rm3508.h  can_motor.cpp  can_motor.h  deeprobotics_j60.cpp  deeprobotics_j60.h  dji_bus_handler.h  dji_m3508.cpp  dji_m3508.h  dji_motor.cpp  dji_motor.h  dji_rm3508.cpp  dji_rm3508.h  dm_s3519.cpp  dm_s3519.h  motor.cpp  motor.h  motor.mermaid  motor_package.h  pid.cpp  pid.h  pwm_motor.cpp  pwm_motor.h  pwm_servo.cpp  pwm_servo.h
src/: aim.cpp  async_serial.cpp  can.cpp  chassis.cpp  dji_dbus.cpp  get_camera_data.cpp  load_ring.cpp  main.cpp  motor_music.cpp  remote.cpp  serial.cpp  shoot_ring.cpp  test.cpp  upper_computer_communication.cpp
test/: uart_test.py
